fix for sound icon overlap with its text in farsi.

--- a/css/index.css
+++ b/css/index.css
@@ -328,6 +328,7 @@ a:hover{
 	user-select: none; 
 }
 #sound{
+    direction: ltr; /* otherwise sound_icon and text would overlap in rtl languages. */
 	position: absolute;
 	left:0; top:0;
 	color: #fff;
